# local-meta

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: monthly-data-import.yml
frontend/: Dockerfile  index.html  nginx.conf
frontend/src/: App.css  index.css  routes.tsx
frontend/src/assets/char_icons/: Supermajor - Clune.htm
frontend/src/components/: LoadingSpinner.tsx  Navbar.tsx
frontend/src/components/dashboard/: BestMatchupsCard.tsx  DashboardCards.tsx  HeatedRivalriesCard.tsx  (+8 more)
frontend/src/pages/: Home.tsx
py-backend/: Dockerfile  pyproject.toml
py-backend/app/: main.py
py-backend/app/api/: main.py
py-backend/app/api/routes/: regions.py  tournaments.py
py-backend/app/archive/: fetch_rankings.py  parse_rankings.py
py-backend/app/db/: database.py  models.py
py-backend/app/services/: example.txt
py-backend/app/services/startgg/: startgg.py
py-backend/data/parsed/rankings/2026-03-19/: ocr.txt
py-backend/data/raw/rankings/2026-03-19/: manifest.json
py-backend/data/reviewed/: winrates.csv
py-backend/data/reviewed/rankings/03-16-26/: western-washington.csv
py-backend/data/reviewed/rankings/georgia/: March 16, 2026.csv
py-backend/data/reviewed/rankings/pacific-northwest/: March 16, 2026.csv
py-backend/scripts/: compute_upsets.py  fetch_character_data.py  fetch_rankings.py  help.sql  import_character_data.py  import_latest_character_data.py  import_latest_rankings_and_upsets.py  import_rankings.py  parse_rankings.py  schema.sql
scripts/ci/region-groups/: group-1.txt  group-2.txt  group-3.txt  group-4.txt
(+7 files in other folders)
