[project]
name = "localmeta-backend"
version = "0.1.0"
description = "Backend API for LocalMeta Smash analytics platform"
authors = [
    {name = "Jack Roan Garces",email = "roangarces315@gmail.com"}
]
requires-python = ">=3.11.1,<3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn[standard] (>=0.42.0,<0.43.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "pylint (>=4.0.5,<5.0.0)",
    "scalene (>=2.1.4,<3.0.0)"
]
